# Autto-Server

./: .gitignore  Dockerfile  cloudtype.yaml  pyproject.toml
data/: fetcher.py  test.py
first/src/: dataSearch.py
model/: log.py
order/: imsi.py  order.py
src/autto/: main.py
src/autto/router/: orderRecord.py  stock.py  wallet.py
src/autto/service/: orderRecordService.py  stockService.py
src/router/: orderRecord.py  stock.py  wallet.py
src/service/: walletService.py
