[tool.poetry]
name = "autto"
version = "0.1.0"
description = ""
authors = ["skgur07 <pigjaoki0970@gmail.com>"]
readme = "README.md"
packages = [{include = "autto", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
